--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
